correction to spacing

--- a/Startup3/css/style.css
+++ b/Startup3/css/style.css
@@ -406,7 +406,7 @@ button {
     width: 100%;
     height: 100%;
     border-bottom: 0.3rem solid #1e0e62;
-    top: 1.5rem;
+    top: 3rem;
     left: 0rem;
     z-index: 1;
 }
